--- a/views/editDoctorProfile.ejs
+++ b/views/editDoctorProfile.ejs
@@ -4,6 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Edit Doctor Profile</title>
+  <style>
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0,0,0);
+      background-color: rgba(0,0,0,0.4);
+      padding-top: 60px;
+    }
+    .modal-content {
+      background-color: #fefefe;
+      margin: 5% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 80%;
+    }
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    #map {
+      height: 400px;
+      width: 100%;
+    }
+    .form-container {
+      margin-top: 20px;
+    }
+
+    #pac-input {
+            margin-top: 10px;
+            margin-left: 10px;
+            padding: 5px;
+            font-size: 14px;
+            width: 400px;
+    }
+
+    
+  </style>
   <script>
     function addInput(fieldName) {
       const container = document.getElementById(fieldName + '-container');
@@ -80,6 +131,15 @@
       hospitalZipInput.placeholder = 'Hospital ZIP';
       hospitalWrapper.appendChild(hospitalZipInput);
 
+      const addGeoButton = document.createElement('button');
+      addGeoButton.type = 'button';
+      addGeoButton.className = 'btn btn-primary';
+      addGeoButton.textContent = 'Add Geolocation';
+      addGeoButton.addEventListener('click', function() {
+        openMapModal(newIndex);
+      });
+      hospitalWrapper.appendChild(addGeoButton);
+
       const removeButton = document.createElement('button');
       removeButton.type = 'button';
       removeButton.className = 'btn btn-danger';
@@ -93,38 +153,147 @@
     }
 
     const allInsurances = <%- JSON.stringify(allInsurances) %>;
-    
-   
-function addInsurance() {
-    const container = document.getElementById('insurances-container');
-    const index = container.children.length;
 
-    const select = document.createElement('select');
-    select.name = `insurances[${index}]`;
-    select.className = 'form-control';
+    function addInsurance() {
+      const container = document.getElementById('insurances-container');
+      const index = container.children.length;
 
-    allInsurances.forEach(ins => {
+      const select = document.createElement('select');
+      select.name = `insurances[${index}]`;
+      select.className = 'form-control';
+
+      allInsurances.forEach(ins => {
         const option = document.createElement('option');
         option.value = ins._id.toString();
         option.textContent = ins.name;
         select.appendChild(option);
+      });
+
+      const div = document.createElement('div');
+      div.className = 'input-group';
+      div.appendChild(select);
+
+      const button = document.createElement('button');
+      button.type = 'button';
+      button.className = 'btn btn-danger';
+      button.textContent = 'Remove';
+      button.onclick = () => div.remove();
+      div.appendChild(button);
+
+      container.appendChild(div);
+    }
+
+    let initialized = false; 
+    let map;
+    let marker;
+    let searchBox;
+
+    function initMap() {
+    map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 5,
+        center: { lat: 20.5937, lng: 78.9629 }
     });
 
-    const div = document.createElement('div');
-    div.className = 'input-group';
-    div.appendChild(select);
+    const input = document.getElementById('pac-input');
+    searchBox = new google.maps.places.SearchBox(input);
+    map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
 
-    const button = document.createElement('button');
-    button.type = 'button';
-    button.className = 'btn btn-danger';
-    button.textContent = 'Remove';
-    button.onclick = () => div.remove();
-    div.appendChild(button);
+    map.addListener('bounds_changed', () => {
+        searchBox.setBounds(map.getBounds());
+    });
 
-    container.appendChild(div);
+    searchBox.addListener('places_changed', () => {
+        const places = searchBox.getPlaces();
+
+        if (places.length === 0) {
+            return;
+        }
+
+        if (marker) {
+            marker.setMap(null);
+        }
+
+        const bounds = new google.maps.LatLngBounds();
+
+        places.forEach((place) => {
+            if (!place.geometry || !place.geometry.location) {
+                console.log('Returned place contains no geometry');
+                return;
+            }
+
+            marker = new google.maps.Marker({
+                map,
+                title: place.name,
+                position: place.geometry.location,
+            });
+
+            document.getElementById('latitude').value = place.geometry.location.lat();
+            document.getElementById('longitude').value = place.geometry.location.lng();
+
+            if (place.geometry.viewport) {
+                bounds.union(place.geometry.viewport);
+            } else {
+                bounds.extend(place.geometry.location);
+            }
+        });
+        map.fitBounds(bounds);
+    });
+
+    map.addListener('click', (event) => {
+        placeMarker(event.latLng);
+    });
+
+    initialized = true; 
 }
+
+function placeMarker(location) {
+  if (marker) {
+    marker.setMap(null);
+  }
+  marker = new google.maps.Marker({
+    position: location,
+    map: map
+  });
+  document.getElementById('latitude').value = location.lat();
+  document.getElementById('longitude').value = location.lng();
+}
+function openMapModal(index) {
+    currentHospitalIndex = index;
+
+    document.getElementById('pac-input').value = '';
+
+    if (!initialized) {
+        initMap();
+    }
+
+    document.getElementById('mapModal').style.display = 'block';
+
+    if (marker) {
+        marker.setMap(null);
+    }
+    map.setCenter({ lat: 20.5937, lng: 78.9629 }); 
+    map.setZoom(5);
+}
+
+    function closeMapModal() {
+      document.getElementById('mapModal').style.display = 'none';
+    }
+
+    function saveLocation() {
+      const lat = document.getElementById('latitude').value;
+      const lng = document.getElementById('longitude').value;
+
+      if (lat && lng) {
+        document.querySelector(`input[name="hospitals[${currentHospitalIndex}][latitude]"]`).value = lat;
+        document.querySelector(`input[name="hospitals[${currentHospitalIndex}][longitude]"]`).value = lng;
+      }
+
+      closeMapModal();
+    }
   </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApr-nSbv28HGFJxddFfjhtNM-xtF2YfMA&libraries=places&callback=initMap" async defer></script>
 </head>
+
 <body>
   <h1>Edit Doctor Profile</h1>
   <form action="/doctor/profile/update" method="POST" enctype="multipart/form-data">
@@ -257,37 +426,59 @@ function addInsurance() {
       <button type="button" onclick="addInput('languages')">Add Language</button>
     </div>
     
-    <div>
-      <label>Hospitals:</label>
-      <div id="hospitals-container">
-        <% doctor.hospitals.forEach((hospital, index) => { %>
-          <div class="input-group">
-            <input type="text" name="hospitals[<%= index %>][name]" class="form-control" value="<%= hospital.name %>" placeholder="Hospital Name" required>
-            <input type="text" name="hospitals[<%= index %>][street]" class="form-control" value="<%= hospital.street %>" placeholder="Hospital Street" required>
-            <input type="text" name="hospitals[<%= index %>][city]" class="form-control" value="<%= hospital.city %>" placeholder="Hospital City" required>
-            <input type="text" name="hospitals[<%= index %>][state]" class="form-control" value="<%= hospital.state %>" placeholder="Hospital State" required>
-            <input type="text" name="hospitals[<%= index %>][country]" class="form-control" value="<%= hospital.country %>" placeholder="Hospital Country" required>
-            <input type="text" name="hospitals[<%= index %>][zip]" class="form-control" value="<%= hospital.zip %>" placeholder="Hospital ZIP" required>
-            <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">Remove</button>
-          </div>
-        <% }) %>
-      </div>
-      <button type="button" class="btn btn-primary" onclick="addHospital()">Add Hospital</button>
-      <div>
-        <label>Insurances:</label>
-        <div id="insurances-container">
-            <% doctor.insurances.forEach((insuranceId, index) => { %>
-                <div class="input-group">
-                    <select name="insurances[<%= index %>]" class="form-control">
-                        <% allInsurances.forEach(ins => { %>
-                            <option value="<%= ins._id %>" <%= ins._id.toString() === insuranceId.toString() ? 'selected' : '' %>><%= ins.name %></option>
-                        <% }) %>
-                    </select>
-                    <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">Remove</button>
-                </div>
-            <% }) %>
+    <div id="hospitals-container">
+      <% doctor.hospitals.forEach((hospital, index) => { %>
+        <div class="input-group">
+          <input type="text" name="hospitals[<%= index %>][name]" class="form-control" value="<%= hospital.name %>" placeholder="Hospital Name" required>
+          <input type="text" name="hospitals[<%= index %>][street]" class="form-control" value="<%= hospital.street %>" placeholder="Hospital Street" required>
+          <input type="text" name="hospitals[<%= index %>][city]" class="form-control" value="<%= hospital.city %>" placeholder="Hospital City" required>
+          <input type="text" name="hospitals[<%= index %>][state]" class="form-control" value="<%= hospital.state %>" placeholder="Hospital State" required>
+          <input type="text" name="hospitals[<%= index %>][country]" class="form-control" value="<%= hospital.country %>" placeholder="Hospital Country" required>
+          <input type="text" name="hospitals[<%= index %>][zip]" class="form-control" value="<%= hospital.zip %>" placeholder="Hospital ZIP" required>
+          
+          <input type="text" name="hospitals[<%= index %>][latitude]" class="form-control" value="<%= hospital.lat || '' %>" placeholder="Latitude">
+          <input type="text" name="hospitals[<%= index %>][longitude]" class="form-control" value="<%= hospital.lng || '' %>" placeholder="Longitude">
+
+          
+          <button type="button" class="btn btn-primary" onclick="openMapModal(<%= index %>)">Add Geolocation</button>
+
+          <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">Remove</button>
         </div>
-        <button type="button" class="btn btn-primary" onclick="addInsurance()">Add Insurance</button>
+      <% }) %>
+    </div>
+    <button type="button" class="btn btn-primary" onclick="addHospital()">Add Hospital</button>
+    <br>
+
+    <div id="mapModal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeMapModal()">&times;</span>
+        <input id="pac-input" class="controls" type="text" placeholder="Search for places">
+        <div id="map"></div>
+        <div class="form-container">
+          <label>Latitude:</label>
+          <input type="text" id="latitude" readonly>
+          <label>Longitude:</label>
+          <input type="text" id="longitude" readonly>
+          <button type="button" onclick="saveLocation()">Save Location</button>
+        </div>
+      </div>
+    </div>
+
+
+    <label>Insurances:</label>
+    <div id="insurances-container">
+        <% doctor.insurances.forEach((insuranceId, index) => { %>
+            <div class="input-group">
+                <select name="insurances[<%= index %>]" class="form-control">
+                    <% allInsurances.forEach(ins => { %>
+                        <option value="<%= ins._id %>" <%= ins._id.toString() === insuranceId.toString() ? 'selected' : '' %>><%= ins.name %></option>
+                    <% }) %>
+                </select>
+                <button type="button" class="btn btn-danger" onclick="this.parentElement.remove()">Remove</button>
+            </div>
+        <% }) %>
+    </div>
+    <button type="button" class="btn btn-primary" onclick="addInsurance()">Add Insurance</button>
     </div>
     
     
